# oncology-experimental-lakehouse

./: LICENSE  README.md  pyproject.toml
infra/: main.tf
src/: config.yaml  generate_data.py  generate_experiments.py  helpers.py  ingest_to_raw_experiments.py
synthetic_data/: config.yaml  constants.py  experiments.py  helpers.py  main.py  orchestration.py  output.py  samples.py  screening_results.py  stocks.py
transform/onc_exp_lh/: dbt_project.yml  packages.yml  profiles.yml
transform/onc_exp_lh/macros/: deduplicate.sql
transform/onc_exp_lh/models/: schema.yml
transform/onc_exp_lh/models/dim/: _dim.yml  dim_antibody_candidates.sql  dim_experiments.sql  dim_samples.sql  dim_stocks.sql
transform/onc_exp_lh/models/fact/: fct_screening_results.sql
transform/onc_exp_lh/models/fct/: _fct.yml  fct_screening_results.sql
transform/onc_exp_lh/models/int/: _int.yml  int_experiments.sql
transform/onc_exp_lh/models/mart/: _mart.yml  mart_antibody_candidate_summary.sql  mart_experiment_summary.sql
transform/onc_exp_lh/models/src/: _sources.yml  schema.yml  sources.yml  src_experiments.sql  src_samples.sql  src_screening_results.sql  src_stocks.sql
transform/onc_exp_lh/models/staging/: stg_experiments.sql
transform/onc_exp_lh/models/stg/: _sources.yml  _stg.yml  stg_experiments.sql  stg_samples.sql  stg_screening_results.sql
transform/onc_exp_lh_dagster/: config.yaml  pyproject.toml
transform/onc_exp_lh_dagster/onc_exp_lh_dagster/: assets.py  definitions.py  ops.py  project.py  sensors.py
transform/onc_exp_lh_dagster/onc_exp_lh_dagster/src/: helpers.py  (+1 more)
(+4 files in other folders)
