[project]
name = "onc-exp-lh"
version = "0.1.0"
description = "Lakehouse data platform for a simulated glioma immunotherapy program."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "boto3>=1.34",
    "faker",

    # HTTP requests (optional but useful for extensions)
    # "requests>=2.31",

    "dbt-core>=1.7",
    "dbt-athena-community>=1.10",
    # "dbt-autofix~=0.18.0",
    "dagster-dbt~=0.28.0",
    "dagster-webserver~=1.12.0"
]